<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#C8C8C8" />

        <RadioGroup
            android:id="@+id/radioGroup_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/menuBottom_homepage_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="3dp"
                android:drawableTop="@mipmap/home"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/menu_bottom_home"
                android:textColor="#787878"
                android:textSize="11sp" />

            <RadioButton
                android:id="@+id/menuBottom_shopping_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="3dp"
                android:drawableTop="@mipmap/buy"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/menu_bottom_buy"
                android:textColor="#787878"
                android:textSize="11sp" />

            <RadioButton
                android:id="@+id/menuBottom_circle_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="3dp"
                android:drawableTop="@mipmap/food"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/menu_bottom_food"
                android:textColor="#787878"
                android:textSize="11sp" />

            <RadioButton
                android:id="@+id/menuBottom_my_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="3dp"
                android:drawableTop="@mipmap/account"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/menu_bottom_account"
                android:textColor="#787878"
                android:textSize="11sp" />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>
