<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">
    <!--导航栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/search_back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:padding="6dp"
            android:src="@mipmap/arrow_left" />

        <EditText
            android:id="@+id/search_to_linkPage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/search_bg"
            android:drawableLeft="@mipmap/search"
            android:drawablePadding="10dp"
            android:gravity="left"
            android:hint="菜谱 食材"
            android:paddingBottom="6dp"
            android:paddingLeft="8dp"
            android:paddingTop="6dp"
            android:textColor="#000"
            android:textColorHint="#787878"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:src="@mipmap/arrow_left"
            android:visibility="invisible" />

    </LinearLayout>
    <!--    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:maxLength="16"
                    android:background="#F0F0F0"
                    android:layout_marginLeft="50dp"
                    android:gravity="center"
                    android:textColorHint="#787878"
                    android:textSize="12sp"
                    android:layout_width="254dp"
                    android:layout_height="22dp"
                    android:hint="@string/search_edittext"
                    android:id="@+id/textView" />
                <ImageView
                    android:layout_marginLeft="167dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/search"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="66dp"
                    android:layout_alignLeft="@+id/textView" />
            </RelativeLayout>
            <ImageView
                android:layout_marginLeft="17dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/arrow_left"/>
        </RelativeLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/search_hot_search"
            android:textColor="#505050"
            android:textSize="11sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/search_top_1"
                    android:textColor="#505050"
                    android:textSize="14sp" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="#C8C8C8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/search_top_2"
                    android:textColor="#505050"
                    android:textSize="14sp" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="#C8C8C8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/search_top_3"
                    android:textColor="#505050"
                    android:textSize="14sp" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="#C8C8C8" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/search_bottom_1"

                    android:textColor="#505050"
                    android:textSize="14sp" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="#C8C8C8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/search_bottom_2"

                    android:textColor="#505050"
                    android:textSize="14sp" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="#C8C8C8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/search_bottom_3"
                    android:textColor="#505050"
                    android:textSize="14sp" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="#C8C8C8" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
