<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="10dp">
    <!--标题栏-->
    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_up_title"
            android:textColor="#505050"
            android:textSize="18sp" />
    </LinearLayout>
    <!--标题左边的箭头-->
    <ImageView
        android:id="@+id/logUp_back_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/arrow_left" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:layout_marginTop="65dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@mipmap/account"
                android:drawablePadding="13dp"
                android:hint="手机号"
                android:textColor="#212121"
                android:textColorHint="#787878" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/line_orange"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="发送验证码"
                android:textColor="#FBBF41" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5dp"
            android:background="#C3C3C3" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:drawableLeft="@mipmap/verification_code"
            android:drawablePadding="13dp"
            android:hint="验证码"
            android:textColor="#212121"
            android:textColorHint="#787878" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5dp"
            android:background="#C3C3C3" />

        <!--android:digits="0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
        意思：设置edittext 只能输入子母和数字，-->
        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
            android:drawableLeft="@mipmap/password"
            android:drawablePadding="13dp"
            android:hint="密码(6-24位字母数字)"
            android:inputType="textPassword"
            android:maxLength="24"
            android:textColor="#212121"
            android:textColorHint="#787878" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5dp"
            android:background="#cccccc" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/head_bg"
            android:text="@string/log_up_title"
            android:textColor="#fff9ed"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="45dp"
            android:gravity="bottom|center">

            <TextView
                android:id="@+id/log_up_text_bottom_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/agreement_1"
                android:textColor="#ADADAD" />

            <TextView
                android:id="@+id/log_up_text_bottom_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/log_up_text_bottom_left"
                android:text="@string/agreement_2"
                android:textColor="#00CCFF" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
